--- a/animation.html
+++ b/animation.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whity</title>
-    <link rel="icon" href="..\Pic\小白.png" type="image/x-icon" />
+    <link rel="icon" href="..\Pic\Whity.png" type="image/x-icon" />
     <link rel="stylesheet" href="Css/animation.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
                 <a href="#">Gallery</a>
                 <ul class="level_2">
                     <li><a href="illustration.html">Illustration</a></li>
-                    <li><a href="trpg_1.html">Trpg</a></li>
+                    <li><a href="trpg_1.html">Logo</a></li>
                     <li><a href="animation.html">Animation</a></li>
                 </ul>
             </li>
@@ -26,10 +26,12 @@
         </ul>
     </nav>
     <div>
-        <div data-aos="fade-down-right"><video src="Pic\video\1.mp4" muted loop autoplay width="600"></video></div>
+        <div data-aos="fade-down-right"><video src="Pic\video\完稿.mp4" muted loop autoplay width="600"></a></div>
         <div class="left" data-aos="fade-down-right"><video src="Pic\video\2.mp4" muted loop autoplay width="400"></video></div>
-        <div data-aos="fade-down-right"><video src="Pic\video\3.mp4" muted loop autoplay width="400"></video></div>
-        <div class="left" data-aos="fade-down-right"><video src="Pic\video\4.mp4" muted loop autoplay width="400"></video></div>
+        <div data-aos="fade-down-right"><video src="Pic\video\1.mp4" muted loop autoplay width="600"></video></div>
+        <div class="left" data-aos="fade-down-right"><video src="Pic\video\3.mp4" muted loop autoplay width="600"></video></div>
+        <div data-aos="fade-down-right"><video src="Pic\video\4.mp4" muted loop autoplay width="600"></video></div>
+
     </div>    
         <nav>
             <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png"
