--- a/photograph.html
+++ b/photograph.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Whity</title>
     <link rel="icon" href="..\Pic\小白.png" type="image/x-icon" />
-	<link rel="stylesheet" href="Css/photograph.css" />
+	<link rel="stylesheet" href="css/photograph.css" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 <a href="#">Gallery</a>
                 <ul class="level_2">
                     <li><a href="illustration.html">Illustration</a></li>
-                    <li><a href="trpg_1.html">Trpg</a></li>
+                    <li><a href="trpg_1.html">Logo</a></li>
                     <li><a href="animation.html">Animation</a></li>
                 </ul>
             </li>
