--- a/trpg_1.html
+++ b/trpg_1.html
@@ -17,39 +17,15 @@
                 <a href="#">Gallery</a>
                 <ul class="level_2">
                     <li><a href="illustration.html">Illustration</a></li>
-                    <li><a href="trpg_1.html">Trpg</a></li>
+                    <li><a href="trpg_1.html">Logo</a></li>
                     <li><a href="animation.html">Animation</a></li>
                 </ul>
             </li>
             <li><a href="photograph.html">Photograph</a></li>
         </ul>
     </nav>
-    <div class="content">
-        <div class="logo">
-            <a href="#"><img class="logo_1" src="Pic/LOGO/Monsters_and_the_Order_of_Fantasy.png" alt="怪物們與綺想教團"
-                    width="160"></a>
-            <a href="trpg_2.html"><img class="logo_2" src="Pic\LOGO\carnival_of_madness.png" alt="狂歡須知" width="160"></a>
-            <a href="trpg_3.html"><img class="logo_1" src="Pic\LOGO\everything_melted_into_subterrane.png" alt="我融於黑暗之中"
-                    width="160"></a>
-            <a href="trpg_4.html"><img class="logo_2" src="Pic\LOGO\DND.png" alt="龍與地下城" width="160"></a>
-        </div>
-        <div class="content_2">
-            <div class="image-container">
-                <img draggable="false" class="zoom-image" id="zoomImg" src="Pic\1.jpg">
-            </div>
-            <div class="content_4">
-                <img draggable="false" src="Pic\左.png" height="100" id="prevImage">
-                <div class="content_3">
-                    <img class="img_2" id="img1" src="Pic\1.jpg">
-                    <img class="img_2" id="img2" src="Pic\2.png">
-                    <img class="img_2" src="Pic\3.jpg">
-                    <img class="img_2" src="Pic\4.jpg">
-                    <img class="img_2" src="Pic\5.jpg">
-                </div>
-                <img draggable="false" src="Pic\右.png" height="100" id="nextImage">
-            </div>
-        </div>
-    </div>
+    <div>
+        <img src=c:\Users\吳佳紜\Desktop\學校\endterm_assignment\Pic\LOGO\F.jpg     height="800" >
     <nav>
         <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png"
                 width="40"></a>
